--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -1,4 +1,4 @@
-name: 'Terraform'
+name: 'Build and Deploy'
 
 on:
   push:
@@ -9,7 +9,28 @@ permissions:
   contents: read
   id-token: write
 
+env:
+  IMAGE_NAME: helloapp
+
 jobs:
+  docker:
+    name: Build container
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v2
+      - name: Log into registry
+        uses: docker/login-action@v1
+        with:
+          registry: ${{ secrets.ACR_ENDPOINT }}
+          username: ${{ secrets.ACR_USERNAME }}
+          password: ${{ secrets.ACR_PASSWORD }}
+      - name: Build & Push
+        uses: docker/build-push-action@v2
+        with:
+          push: true
+          tags: ${{ secrets.ACR_ENDPOINT }}/${{ env.IMAGE_NAME }}:latest
+
   terraform:
     name: 'Terraform'
     runs-on: ubuntu-latest
