--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -26,12 +26,15 @@ jobs:
           registry: ${{ secrets.ACR_ENDPOINT }}
           username: ${{ secrets.ACR_USERNAME }}
           password: ${{ secrets.ACR_PASSWORD }}
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v2
       - name: Build & Push
         uses: docker/build-push-action@v2
         with:
+          context: "{{defaultContext}}:app"
           push: true
           tags: ${{ secrets.ACR_ENDPOINT }}/${{ env.IMAGE_NAME }}:latest
-          file: app/Dockerfile
+          #file: app/Dockerfile
 
   terraform:
     name: 'Terraform'
