--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -58,6 +58,15 @@ jobs:
     - name: Checkout
       uses: actions/checkout@v3
 
+    # Setup OIDC auth to GCP
+    - id: 'auth'
+      name: 'Authenticate to Google Cloud'
+      uses: 'google-github-actions/auth@v0.3.1'
+      with:
+        create_credentials_file: true
+        workload_identity_provider: 'projects/84251699846/locations/global/workloadIdentityPools/github-actions/providers/github-actions-arcrowe'
+        service_account: 'github-actions@hashiconf-demo-364100.iam.gserviceaccount.com'
+    
     # Install the latest version of Terraform CLI and configure the Terraform CLI configuration file with a Terraform Cloud user API token
     - name: Setup Terraform
       uses: hashicorp/setup-terraform@v1
