--- a/app/managed-cert.yaml
+++ b/app/managed-cert.yaml
@@ -5,3 +5,11 @@ metadata:
 spec:
   domains:
     - hashiconf-entra-demo.app
+
+resource "google_compute_managed_ssl_certificate" "managed-cert" {
+  name = "managed-cert"
+
+  managed {
+    domains = ["hashiconf-entra-demo.app"]
+  }
+}
