--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -91,6 +91,9 @@ jobs:
       #if: github.ref == 'refs/heads/"master"' && github.event_name == 'push'
       run: terraform apply -auto-approve -input=false
       
+    - name: List Files
+      run: dir
+      
     # Change directory to kubernetes deployment
     - name: Change Directory
       run: cd kube-module
