--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -5,5 +5,7 @@ services:
     container_name: dannyapp
     environment:
       PORT: 8080
+      APP_ID : 8b681536-2848-4d11-bd30-0b1c9fa2bab4
+      CLIENT_SECRET : 1sx8Q~vYh4h2a8etF6QqJyLUjES9nE~7xgAn2cIg
     ports:
         - "8080:8080"
