--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -90,17 +90,24 @@ jobs:
     - name: Terraform Apply
       #if: github.ref == 'refs/heads/"master"' && github.event_name == 'push'
       run: terraform apply -auto-approve -input=false
-    
-    # Initialize a new or existing Terraform working directory by creating initial files, loading any remote state, downloading modules, etc.
+      
     - name: Terraform Init
       run: terraform -chdir=kube-module init -upgrade
-
-    # Generates an execution plan for Terraform
+        
     - name: Terraform Plan
       run: terraform -chdir=kube-module plan -input=false
 
-      # On push to "master", build or change infrastructure according to Terraform configuration files
-      # Note: It is recommended to set up a required "strict" status check in your repository for "Terraform Cloud". See the documentation on "strict" required status checks for more information: https://help.github.com/en/github/administering-a-repository/types-of-required-status-checks
     - name: Terraform Apply
-      #if: github.ref == 'refs/heads/"master"' && github.event_name == 'push'
       run: terraform -chdir=kube-module apply -auto-approve -input=false
+      
+  pim:
+    name: pim
+    runs-on: windows-2019
+    needs: terraform
+    steps:
+    - name: Check out repo        
+      uses: actions/checkout@v2
+    - run: |
+          ./pim.ps1
+    
+  
