--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -105,15 +105,14 @@ jobs:
     runs-on: windows-2019
     #needs: terraform
     steps:
-    #- name: Check out repo        
-    #  uses: actions/checkout@v2
-    #- run: |
-    #      ./pim.ps1
+    - name: Check out repo        
+      uses: actions/checkout@v2
+    - name: Install and cache PowerShell module
+      uses: potatoqualitee/psmodulecache@v5.0
+      with:
+        modules-to-cache: AzureADPreview
+    - run: |
+          ./pim.ps1
           
-     - name: Azure PowerShell Action
-       uses: Azure/powershell@v1
-       with:
-       # Specify the Az PowerShell script here.
-          inlineScript: ./pim.ps1
     
   
