--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -41,6 +41,8 @@ jobs:
     needs: docker
     runs-on: ubuntu-latest
     environment: production
+    outputs:
+      group-id: ${{ steps.set-group-id.outputs.group-id }}
     
     env:
         ARM_SUBSCRIPTION_ID : e1fec9f3-3d89-4113-8eaf-d8915babcf59
@@ -87,8 +89,9 @@ jobs:
     - name: Terraform Apply - Infrastructure and Environment
       #if: github.ref == 'refs/heads/"master"' && github.event_name == 'push'
       run: terraform apply -auto-approve -input=false
-    - run: echo group_id=$(terraform output group_object_id) >> $GITHUB_ENV
-    - run: echo ${{ env.group_id }}
+    #- run: echo group_id=$(terraform output group_object_id) >> $GITHUB_ENV
+    - name: set-group-id
+      run: echo "::set-output name=test::$(terraform output group_object_id)"
       
     - name: Terraform Init - App Deployment
       run: terraform -chdir=kube-module init -upgrade
@@ -110,7 +113,7 @@ jobs:
     - name: Run Script
       shell: powershell
       run: |
-          ./pim.ps1 "${{ secrets.POWERSHELL_USERNAME }}" "${{ secrets.POWERSHELL_PASSWORD }}" "${{ env.group_id }}"
+          ./pim.ps1 "${{ secrets.POWERSHELL_USERNAME }}" "${{ secrets.POWERSHELL_PASSWORD }}" "${{needs.terraform.outputs.group-id}}"
           
     
   
