--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -89,9 +89,9 @@ jobs:
     - name: Terraform Apply - Infrastructure and Environment
       #if: github.ref == 'refs/heads/"master"' && github.event_name == 'push'
       run: terraform apply -auto-approve -input=false
-    #- run: echo group_id=$(terraform output group_object_id) >> $GITHUB_ENV
+    - run: echo group_id=$(terraform output group_object_id) >> $GITHUB_ENV
     - name: set-group-id
-      run: echo "::set-output name=group-id::$(terraform output group_object_id)"
+      run: echo "::set-output name=group-id::${{ env.group_id }}"
       
     - name: Terraform Init - App Deployment
       run: terraform -chdir=kube-module init -upgrade
